# Cpp_notes

C++ Primer/: CMakeLists.txt  main.cpp  test2.cpp
C++ Primer/Exception/: exception object.h
C++ Primer/Generic/: algorithm and lambda function.h  algorithm.h  functional.h
C++ Primer/Generic algorithm/: algorithm and lambda function.h  functional.h
C++ Primer/NameSpace/: Sale_data.cpp  Sale_data.h  name space.cpp
C++ Primer/Others/: array_to_ptr_analysis.cpp
C++ Primer/Reference member/: referenc member.cpp
C++ Primer/STL/: STL member function.h  map set.h  unordered container.h
C++ Primer/Summary/: CMakeLists.txt  ReadMe.md  constructor.h  copy_and_move.h  destructor.h  main.cpp  public_private_protected.h  the_rules_of_three.h
C++ Primer/class/: class has like ptr behavious.h  const member and private destructor.h  copy constructor and assignment.h  copy constructor in inheritance.h  enum.h  friend in class.h  nested type.cpp  overloading with namespace and inheritant.h  override(vtable) and redefine.cpp  restore inheritance in STL.h  smart ptr.h  swap.h
C++ Primer/function and function pointer/: function pointer.h  member function ptr.cpp
C++ Primer/generic and template/: Universal reference.h  class template.h  class type template.h  function template specialization .h  (+3 more)
Effective Cpp/: CMakeLists.txt  main.cpp
Effective Cpp/22 declare data members private/: encapsulation.h
Effective Cpp/23 non-member func substitude member func/: non-member func and namespace.h
Effective Cpp/25 consider support for a non-throwing swap/: swap.h
Effective Cpp/27 minize casting/: minize casting.h
Effective Cpp/28 avoid returning handle to object internals/: avoid return handles.cpp
Effective Cpp/30 understanding inlining/: inline.cpp
Effective Cpp/32 public -> is a /: public and is a .h
Effective Cpp/33 Avoid hiding inherited named/: hiding name.h
Effective Cpp/34 Differentiate between interface and implementation/: differentiate between itf and implement.h
Effective Cpp/35. consider alternatives to virtual functions (strategy mode)/: strategy mode and method template mode.h
Effective Cpp/38. Model "has-a" or "is implemented in terms of" through compostion/: composition semantics.h
Effective Cpp/39. use private inheritance judiciously/: private inheritance semantics.h
Effective Cpp/41. understant implicit interfaces and compiles time polymorphism/: template interface and polymorphism.h
Effective Cpp/42. typename meaning in template/: understand the two meanings of typename.h
Effective Cpp/43. know how to access names in templatized base classes/: template base name .h
Effective Cpp/44. factor parameter independent code out of templates/: change non type parameter out of template.h
Effective Cpp/45. Use member function templates to accept "all compatible types"/: all compatible template type.h
Effective Cpp/48. Be aware of template metaprogramming/: factorial by template.h
Effective Cpp/Const/: const.cpp
Effective Cpp/Copy Constructor/: CopyConstructorTest.cpp
Effective Cpp/Design and Decaration/: hard to incorrectly.h
Effective Cpp/Singleton/: singleton.cpp
Effective Cpp/deference between reference and value/: pass by value and reference.h
Effective Cpp/multiple inheritance and virtual public/: multiple inheritance.cpp
Effective Cpp/never call virtual func in constructor or destructor/: prover.cpp
Effective Cpp/smartPtr to realize RAII/: smartPtr.h
Inside the C++ Object Model/: notes.cpp
More Effective C++/: CMakeLists.txt  main.cpp  polymorphically array.h
PracticeProject/: template_virtual_interface.cpp
STL/: functor.cpp  std::iterator.cpp
head first design parttern/: CMakeLists.txt
head first design parttern/Adapter/: ReadMe.md  main Adapter.cpp
head first design parttern/Decorator Pattern/: Beverage.h  ReadMe.md  decorator main.cpp  decrator.cpp  decrator.h  drinks.cpp  drinks.h
head first design parttern/Encapsulation Algorithm/: ReadMe.md  main.cpp
head first design parttern/Factory Mode/: ChicagoPizzaIngredientFactory.cpp  ChicagoPizzaIngredientFactory.h  ChicagoPizzaStore.cpp  ChicagoPizzaStore.h  ChicagoStyleCheesePizza.cpp  ChicagoStyleCheesePizza.h  ChicagoStylePepperoniPizza.cpp  ChicagoStylePepperoniPizza.h  NYPizzaIngredientFactory.cpp  NYPizzaIngredientFactory.h  NYPizzaStore.cpp  NYPizzaStore.h  NYStyleCheesePizza.cpp  NYStyleCheesePizza.h  NYStylePepperoniPizza.cpp  NYStylePepperoniPizza.h  Pizza.cpp  Pizza.h  PizzaIngredientFactory.h  PizzaStore.cpp  PizzaStore.h  ReadMe.md  factory mode main.cpp
head first design parttern/Method Invocation/: BedRoomLight.h  Command.h  Light.h  LightOffCmd.h  LightOnCmd.h  NoCommand.h  ReadMe.md  RemoteController.h  WashRoomLight.cpp  WashRoomLight.h  main method Invocation.cpp
head first design parttern/Observer Pattern/: CurrentConditionsDisplay.cpp  CurrentConditionsDisplay.h  Display.h  Observer.h  ReadMe.md  Subject.h  ThirdPartyDisplay.cpp  ThirdPartyDisplay.h  WeatherData.cpp  WeatherData.h  main Observer pattern.cpp
head first design parttern/Singleton/: ReadMe.md
head first design parttern/StateMachine/: all_state.cpp  all_state.h  gumball_machine.h  main.cpp  state.h
head first design parttern/strategy parttern/: Duck.cpp  Duck.h  FlyBehavior.cpp  FlyBehavior.h  FlyRocketPowered.h  FlyWithWings.h  MallardDuck.h  ModelDuck.h  MuteQuack.h  Quack.h  QuackBehavior.h  README.md  RedHeadDuck.h  Squeak.h  main_strategy_parttern.cpp
(+121 files in other folders)
